# deep-c-cpp-park-vk-education

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  business_logic.c  coverage  coverage.info  coverage.sh  coverage_2.sh  create_testfile.c  main.c  start_server.txt  testfile.txt
.github/workflow/: ci.yml
.github/workflows/: ci.yml
async_lib/: CMakeLists.txt  main.c
async_lib/logic/: async_business_logic.c  async_calculations.c
async_lib/processes/: processes.h
include/: task_info.h  task_list.h
linters/: run.sh
linters/cpplint/: cpplint.py
project/: CMakeLists.txt  business_logic.c  business_logic.h  calculations.c
project/async_lib/: CMakeLists.txt
project/async_lib/logic/: async_business_logic.c  async_calculations.c
project/async_lib/matrix/: matrix.c
project/business_logic/: CMakeLists.txt  business_logic.c  business_logic.h
project/include/: task_data.h  task_info.h  task_list.h  task_parser.h
project/matrix/: CMakeLists.txt  matrix.c  matrix.h  matrix_basic.c  matrix_calculations.c  matrix_inout.c  matrix_memory.c
project/processes/: CMakeLists.txt  processes.h
project/src/: main.c  new_task_list.c  proccesing_input.c  task.c  task_inout.c  task_list.c  task_memory.c  task_methods.c
project/src/list/: business_logic.c  task_list_memory.c  task_list_modify.c
project/src/task/: get_field.c  task_inout.c  task_memory.c  task_parser.c  task_proccesing.c
project/src_2/: main.c
project/src_2/list/: business_logic.c  list_data.c  task_list.c  task_list_memory.c  task_list_modify.c
project/src_2/task/: task_inout.c  task_memory.c
project/sync_lib/: CMakeLists.txt  main.c
project/sync_lib/logic/: business_logic.c  calculations.c
src/: main.c
src/list/: business_logic.c  task_list_memory.c  task_list_modify.c
src/task/: get_field.c  task_inout.c  task_memory.c  task_proccesing.c
sync_lib/: CMakeLists.txt
sync_lib/logic/: business_logic.c
sync_lib/matrix/: matrix.h
tests/: CMakeLists.txt  async_test.cpp  correct_data.txt  correct_test.cpp  gtest.cpp  main_test.cpp  memtest.sh  sync_test.cpp
tests/async_tests/: CMakeLists.txt
tests/async_tests/test_files/: small.txt
tests/sync_tests/: CMakeLists.txt  correct_test.cpp
tests/test_files/: big.txt  medium.txt  normal.txt
